--- a/qr.html
+++ b/qr.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0;url="https://drive.google.com/file/d/1u8XMStMXI6M5h8mZ-m5m3_uIvXZMo7jJ/view?usp=sharing">
+    <meta http-equiv="refresh" content="0;url=https://drive.google.com/file/d/1u8XMStMXI6M5h8mZ-m5m3_uIvXZMo7jJ/view?usp=sharing">
     <title>Redirecting...</title>
 </head>
 <body>
