--- a/qr.html
+++ b/qr.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <p>If you are not redirected, <a href="https://drive.google.com/file/d/1u8XMStMXI6M5h8mZ-m5m3_uIvXZMo7jJ/view?usp=sharing">click here</a>.</p>
-    <img src="https://github.com/agzg/kgso-qr/blob/4f5f6a70e4dac58644a745674547aa78fa11a62c/day1.jpg"/>
+    <img src="https://raw.githubusercontent.com/agzg/kgso-qr/4f5f6a70e4dac58644a745674547aa78fa11a62c/day1.jpg">
 </body>
 </html>
